# solana-bittensor

./: Anchor.toml
programs/solana-bittensor/: Cargo.toml
programs/solana-bittensor/src/: errors.rs  lib.rs
programs/solana-bittensor/src/instructions/: end_epoch_weights.rs  initialize_subnet.rs  initialize_subnet_miner.rs  miner_reward.rs  mint_tao.rs  mod.rs  reward_subnet_miners.rs  reward_subnet_validators.rs  set_miner_weights.rs  test.rs  validator_reward.rs  validator_stake.rs
programs/solana-bittensor/src/instructions/bittensor/: end_epoch.rs  initialize_bittensor.rs  mint_tao.rs  mod.rs  register_bittensor_validator.rs  set_subnet_weights.rs
programs/solana-bittensor/src/instructions/subnet/: _end_subnet_medians.rs  calculate_weights.rs  end_epoch_weights.rs  end_subnet_epoch.rs  end_subnet_medians.rs  initialize_subnet.rs  initialize_subnet_miner.rs  initialize_subnet_validator.rs  miner_reward.rs  miner_stake.rs  miner_withdraw_stake.rs  mint_tao.rs  mod.rs  register_subnet.rs  register_subnet_miners.rs  register_subnet_weights.rs  reward_subnet_miners.rs  reward_subnet_validators.rs  set_miner_weight.rs  set_miner_weights.rs  subnet_validator_stake.rs  test.rs  validator_reward.rs  validator_stake.rs  validator_withdraw_stake.rs
programs/solana-bittensor/src/states/: bittensor.rs  bittensor_epoch.rs  miner.rs  miners_weights.rs  mod.rs  subnet.rs  subnet_epoch.rs  subnet_miners.rs  subnet_validator.rs  subnet_weights.rs  validator.rs
tests/: solana-bittensor.ts
