[package]
name = "solana-bittensor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_bittensor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["custom-heap"]
custom-heap = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0"}
solana-program = "<1.17.0"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
mpl-token-metadata = "4.1.2"
